
<resources>
    <string name="app_name" translatable="false">Epub Reader</string>
    <string name="menu_item_show_epub_list">Show List</string>
    <string name="menu_item_add_epub">Add ePub</string>
    <string name="menu_item_filter">Filter</string>
    <string name="progress_wait_while_searching_book">Please wait.</string>
    <string name="progress_wait">Please wait.</string>
    <string name="progress_wait_while_downloading_book">Please wait while your publication is being downloaded.</string>
    <string name="progress_wait_while_preparing_book">Please wait while your publication is being prepared.</string>
    <string name="progress_wait_while_preparing_audiobook">Please wait while your audiobook is being prepared.</string>
    <string name="progress_wait_while_loading_feed">Please wait while your feed is loading.</string>
    <string name="error_invalid_epub">Invalid Epub</string>
    <string name="fallback_no_description">No description</string>
    <string name="button_dismiss">DISMISS</string>

    <string name="epubactivity_drm_info">DRM Info</string>
    <string name="epubactivity_set_bookmark">Add a bookmark</string>
    <string name="epubactivity_settings">User Settings</string>
    <string name="epubactivity_book_nav_options">Book navigation menu</string>
    <string name="epubactivity_read_aloud_start">Read Aloud</string>
    <string name="epubactivity_read_aloud_stop">Stop Read Aloud</string>
    <string name="epubactivity_search">Search</string>

    <string name="epubactivity_accessibility">Accessibility</string>
    <string name="epubactivity_accessibility_screen_reader_start">Start Screen Reader</string>
    <string name="epubactivity_accessibility_screen_reader_pause">Pause Screen Reader</string>
    <string name="epubactivity_accessibility_screen_reader_resume">Resume Screen Reader</string>
    <string name="epubactivity_accessibility_screen_reader_stop">Stop Screen Reader</string>

    <string name="permission_read_ext_explanation">The app needs to read your storage so it can read and write books.</string>
    <string name="permission_external_new_explanation">Can\'t read or write books without permission</string>
    <string name="permission_read_ext_request">Should we ask for the permission again?</string>
    <string name="permission_request_again">Request again</string>
    <string name="permission_retry">Retry?</string>
    <string name="permission_goto_settings">Settings</string>


    <string name="title_activity_opdscatalog">OPDS Catalog</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_r2_about">About R2 Reader</string>
    <string name="title_activity_opds_list">OPDS Feeds</string>
    <string name="title_activity_opds_detail">Detail</string>
    <string name="title_activity_outline">Outline</string>
    <string name="title_activity_epub">Detail</string>
    <string name="floating_button_add_book">Add a Book</string>
    <string name="floating_button_add_feed">Add a OPDS Feed</string>
    <string name="about_r2_reader">About R2 Reader</string>
    <string name="more_options">More Options</string>
    <string name="opds_feeds">OPDS Feeds</string>
    <string name="popup_delete_button">DELETE</string>
    <string name="add_publication_to_library">Add a publication to your library</string>
    <string name="select_from_your_device">select from your device</string>
    <string name="download_from_url">download from a url</string>

    <string name="app_version_header">Version</string>
    <string name="app_version_label">App Version:</string>
    <string name="app_version">2.1.0</string>
    <string name="github_tab_label">GitHub Tag:</string>
    <string name="github_tag">V2.1.0-beta.2</string>

    <string name="copyright_label">Copyright</string>
    <string name="copyright">\@ 2019 European Digital Reading Lab</string>
    <string name="bsd_license_label">[BSD-3 license]</string>
    <string name="bsd_license_label_accessible">[B S D 3 license]</string>
    <string name="acknowledgements_label">Acknowledgements</string>
    <string name="acknowledgements_french_state">R2 Reader wouldn\'t have been developed without the financial help of the French state.</string>
    <string name="opds_list_more">More…</string>
    <string name="opds_detail_download_button">Download</string>


    <string name="menu_label_drm">DRM</string>
    <string name="menu_label_settings">Settings</string>
    <string name="menu_label_toc">TOC</string>
    <string name="usersettings_label_font">Font</string>
    <string name="usersettings_appearance_default">Default</string>
    <string name="usersettings_appearance_sepia">Sepia</string>
    <string name="usersettings_appearance_night">Night</string>
    <string name="usersettings_label_scroll_mode">Scroll mode</string>
    <string name="usersettings_publisher_default">"Publisher's Default"</string>
    <string name="usersettings_publisher_default_accessibility">"Publisher's Default Settings"</string>
    <string name="usersettings_label_columns">Columns</string>
    <string name="usersettings_auto">Auto</string>
    <string name="usersettings_column_one">1</string>
    <string name="usersettings_column_two">2</string>
    <string name="usersettings_label_page_margins">Page Margins</string>
    <string name="usersettings_page_margin_default">0.75</string>
    <string name="usersettings_label_word_spacing">Word Spacing</string>
    <string name="usersettings_label_letter_spacing">Letter Spacing</string>
    <string name="usersettings_label_line_height">Line Height</string>
    <string name="usersettings_label_TTS_speech_speed">TTS speed</string>

    <!-- Accessibility -->

    <string name="usersettings_description_TTS_speech_speed">Set TTS speech speed</string>
    <string name="usersettings_description_brightness">Set Brightness</string>
    <string name="usersettings_description_font_increase">Increase Font Size</string>
    <string name="usersettings_description_font_decrease">Decrease Font Size</string>
    <string name="usersettings_description_pm_increase">Increase Page Margins Size</string>
    <string name="usersettings_description_pm_decrease">Decrease Page Margins Size</string>
    <string name="usersettings_description_ws_increase">Increase Word Spacing</string>
    <string name="usersettings_description_ws_decrease">Decrease Word Spacing</string>
    <string name="usersettings_description_ls_increase">Increase Letter Spacing</string>
    <string name="usersettings_description_ls_decrease">Decrease Letter Spacing</string>
    <string name="usersettings_description_lh_increase">Increase Line Height</string>
    <string name="usersettings_description_lh_decrease">Decrease Line Height</string>

    <string name="drm_information_header">INFORMATION</string>
    <string name="drm_label_license_type">License Type</string>
    <string name="drm_label_state">State</string>
    <string name="drm_label_provider">Provider</string>
    <string name="drm_label_issued">Issued</string>
    <string name="drm_label_updated">Updated</string>
    <string name="drm_label_rights">RIGHTS</string>
    <string name="drm_label_prints_left">Prints left</string>
    <string name="drm_label_copies_left">Copies left</string>
    <string name="drm_label_start">Start</string>
  <string name="drm_label_end">End</string>
  <string name="drm_label_potential_right_end">Potential right end</string>
  <string name="drm_label_actions">ACTIONS</string>
  <string name="drm_label_renew">RENEW</string>
  <string name="drm_label_return">RETURN</string>
  <string name="zero">00:00</string>
  <string name="chapter">Chapter</string>
  <string name="chapter_page">Chapter / Page</string>
  <string name="progression">Progression</string>
  <string name="timestamp">Timestamp</string>
  <string name="navigation_drawer_open">open</string>
  <string name="navigation_drawer_close">close</string>

  <string-array name="font_list">
    <item>Original</item>
    <item>PT Serif</item>
    <item>Roboto</item>
    <item>Source Sans Pro</item>
    <item>Vollkorn</item>
    <item>OpenDyslexic</item>
  </string-array>

</resources>
