<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="320dp"
  android:background="@android:color/white"
  android:padding="8dp"
  android:layout_height="match_parent"
  android:orientation="vertical">
  <Switch
    android:id="@+id/scroll_mode"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:text="@string/usersettings_label_scroll_mode"
    android:textSize="16sp" />

  <TextView
    android:id="@+id/TTS_speed_progressBar_text"
    android:layout_width="match_parent"
    android:layout_height="24dp"
    android:text="@string/usersettings_label_TTS_speech_speed"
    android:textSize="16sp"
    android:textStyle="bold" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
      android:id="@+id/imageView2"
      android:layout_width="14dp"
      android:layout_height="20dp"
      android:layout_weight="10"
      app:srcCompat="@android:drawable/ic_media_rew" />

    <SeekBar
      android:id="@+id/TTS_speech_speed"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="100"
      android:contentDescription="@string/usersettings_description_TTS_speech_speed" />

    <ImageView
      android:id="@+id/imageView5"
      android:layout_width="14dp"
      android:layout_height="20dp"
      android:layout_weight="10"
      app:srcCompat="@android:drawable/ic_media_ff" />
  </LinearLayout>

  <Switch
    android:id="@+id/publisher_default"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:layout_marginTop="10dp"
    android:text="@string/usersettings_publisher_default"
    android:textSize="16sp" />
  <TextView
    android:layout_width="match_parent"
    android:layout_height="24dp"
    android:text="Allignment"
    android:textSize="16sp"
    android:textStyle="bold" />
  <RadioGroup
    android:id="@+id/TextAlignment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:orientation="horizontal">


    <RadioButton
      android:id="@+id/alignment_justify"
      android:layout_width="wrap_content"
      android:layout_height="36dp"
      android:layout_weight="1"
      android:background="@drawable/rbtn_selector"
      android:button="@null"
      android:checked="true"
      android:drawableTop="@drawable/icon_justify_white"
      android:gravity="center"
      android:padding="10dp"
      android:textColor="@drawable/rbtn_textcolor_selector" />

    <RadioButton
      android:id="@+id/alignment_left"
      android:layout_width="wrap_content"
      android:layout_height="36dp"
      android:layout_weight="1"
      android:background="@drawable/rbtn_selector"
      android:button="@null"
      android:drawableTop="@drawable/icon_left"
      android:gravity="center"
      android:padding="10dp"
      android:textColor="@drawable/rbtn_textcolor_selector" />

  </RadioGroup>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:orientation="horizontal">


    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_vertical"
      android:layout_marginEnd="20dp"
      android:gravity="center_horizontal"
      android:text="@string/usersettings_label_columns" />

    <RadioGroup
      android:id="@+id/columns"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">


      <RadioButton
        android:id="@+id/column_auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/rbtn_selector"
        android:button="@null"
        android:checked="true"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/usersettings_auto"
        android:textColor="@drawable/rbtn_textcolor_selector" />

      <RadioButton
        android:id="@+id/column_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/rbtn_selector"
        android:button="@null"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/usersettings_column_one"
        android:textColor="@drawable/rbtn_textcolor_selector" />

      <RadioButton
        android:id="@+id/column_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/rbtn_selector"
        android:button="@null"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/usersettings_column_two"
        android:textColor="@drawable/rbtn_textcolor_selector" />

    </RadioGroup>


  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:orientation="horizontal">

    <ImageButton
      android:id="@+id/pm_decrease"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:layout_weight="1"
      android:backgroundTint="@android:color/white"
      android:contentDescription="@string/usersettings_description_pm_decrease"
      android:padding="16dp"
      android:scaleType="fitCenter"
      android:src="@drawable/icon_minus" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_gravity="center_horizontal"
      android:layout_weight="100"
      android:gravity="center_horizontal"
      android:orientation="vertical">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usersettings_label_page_margins" />

      <TextView
        android:id="@+id/pm_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usersettings_page_margin_default" />
    </LinearLayout>

    <ImageButton
      android:id="@+id/pm_increase"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:layout_weight="1"
      android:backgroundTint="@android:color/white"
      android:contentDescription="@string/usersettings_description_pm_increase"
      android:padding="16dp"
      android:scaleType="fitCenter"
      android:src="@drawable/icon_plus" />

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:layout_marginBottom="10dp"
    android:orientation="horizontal">

    <ImageButton
      android:id="@+id/ws_decrease"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:layout_weight="1"
      android:backgroundTint="@android:color/white"
      android:contentDescription="@string/usersettings_description_ws_decrease"
      android:padding="16dp"
      android:scaleType="fitCenter"
      android:src="@drawable/icon_minus" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_gravity="center_horizontal"
      android:layout_weight="100"
      android:gravity="center_horizontal"
      android:orientation="vertical">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usersettings_label_word_spacing" />

      <TextView
        android:id="@+id/ws_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usersettings_auto" />
    </LinearLayout>

    <ImageButton
      android:id="@+id/ws_increase"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:layout_weight="1"
      android:backgroundTint="@android:color/white"
      android:contentDescription="@string/usersettings_description_ws_increase"
      android:padding="16dp"
      android:scaleType="fitCenter"
      android:src="@drawable/icon_plus" />

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:layout_marginBottom="10dp"
    android:orientation="horizontal">

    <ImageButton
      android:id="@+id/ls_decrease"

      android:layout_width="48dp"
      android:layout_height="48dp"
      android:layout_weight="1"
      android:backgroundTint="@android:color/white"
      android:contentDescription="@string/usersettings_description_ls_decrease"
      android:padding="16dp"
      android:scaleType="fitCenter"
      android:src="@drawable/icon_minus" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_gravity="center_horizontal"
      android:layout_weight="100"
      android:gravity="center_horizontal"
      android:orientation="vertical">

      <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usersettings_label_letter_spacing" />

      <TextView
        android:id="@+id/ls_display"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usersettings_auto" />
    </LinearLayout>

    <ImageButton
      android:id="@+id/ls_increase"

      android:layout_width="48dp"
      android:layout_height="48dp"
      android:layout_weight="1"
      android:backgroundTint="@android:color/white"
      android:contentDescription="@string/usersettings_description_ls_increase"
      android:padding="16dp"
      android:scaleType="fitCenter"
      android:src="@drawable/icon_plus" />

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="horizontal">

    <ImageButton
      android:id="@+id/lh_decrease"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:layout_weight="1"
      android:backgroundTint="@android:color/white"
      android:contentDescription="@string/usersettings_description_lh_decrease"
      android:padding="16dp"
      android:scaleType="fitCenter"
      android:src="@drawable/icon_minus" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_gravity="center_horizontal"
      android:layout_weight="100"
      android:gravity="center_horizontal"
      android:orientation="vertical">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usersettings_label_line_height" />

      <TextView
        android:id="@+id/lh_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usersettings_auto" />
    </LinearLayout>

    <ImageButton
      android:id="@+id/lh_increase"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:backgroundTint="@android:color/white"
      android:contentDescription="@string/usersettings_description_lh_increase"
      android:padding="16dp"
      android:scaleType="fitCenter"
      android:src="@drawable/icon_plus" />

  </LinearLayout>


</LinearLayout>
