<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:background="@android:color/white"
  android:orientation="vertical">
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:background="@android:color/white"
    android:orientation="horizontal">


    <ImageView
      android:id="@+id/imageView3"
      android:layout_width="14dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center_vertical"
      android:layout_weight="1"
      app:srcCompat="@drawable/icon_decrease" />

    <SeekBar
      android:id="@+id/brightness"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center_vertical"
      android:layout_weight="100"
      android:contentDescription="@string/usersettings_description_brightness" />

    <ImageView
      android:id="@+id/imageView4"
      android:layout_width="20dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center_vertical"
      android:layout_weight="1"
      app:srcCompat="@drawable/icon_increse" />
  </LinearLayout>
  <RadioGroup
    android:id="@+id/appearance"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:background="@android:color/white"
    android:orientation="horizontal">


    <RadioButton
      android:id="@+id/appearance_default"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:background="@drawable/rbtn_selector"
      android:button="@null"
      android:checked="true"
      android:gravity="center"
      android:padding="5dp"
      android:text="@string/usersettings_appearance_default"
      android:textColor="@drawable/rbtn_textcolor_selector"
      android:textSize="16sp" />

    <RadioButton
      android:id="@+id/appearance_sepia"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:background="@drawable/rbtn_selector"
      android:button="@null"
      android:gravity="center"
      android:padding="5dp"
      android:text="@string/usersettings_appearance_sepia"
      android:textColor="@drawable/rbtn_textcolor_selector"
      android:textSize="16sp" />

    <RadioButton
      android:id="@+id/appearance_night"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:background="@drawable/rbtn_selector"
      android:button="@null"
      android:gravity="center"
      android:padding="5dp"
      android:text="@string/usersettings_appearance_night"
      android:textColor="@drawable/rbtn_textcolor_selector"
      android:textSize="16sp" />

  </RadioGroup>
</LinearLayout>